fixing flexbox spacing issue for IE11 only on profile page

--- a/static_dev/scss/main/state/_browser_hacks.scss
+++ b/static_dev/scss/main/state/_browser_hacks.scss
@@ -55,4 +55,12 @@
             }
         }
     }
+    
+    /** Fix spacing issue on profile page for IE11 **/
+    @media only screen and (max-width:767px) {
+        .Grid-cell {
+           flex-basis: 200px;
+        }
+    }
+    
 } /** ./ End i11 **/
